# Darkbag

./: .gitignore  .gitmodules  OPTIMIZATION.md  README.md  build.gradle  build_output.txt  calculate_matrices.py  check_braces.py  temp_logic.kt  temp_snippet.txt  verify_matrices.py
.github/workflows/: build.yml
.jules/: bolt.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ColorMatrices.h  ColorPipe.cpp  ColorPipe.h  HdrPlusJNI.cpp  download_halide.cmake  hdrplus_pipeline_generator.cpp  native-lib.cpp  stb_image_write.h
app/src/main/cpp/libraw/: COPYRIGHT  Changelog.txt  DEVELOPER-NOTES  INSTALL  LibRaw.pro  Makefile.am  Makefile.devel  Makefile.msvc  README.DNGSDK.txt  README.GoPro.txt  README.RawSpeed.txt  README.cmake  README.demosaic-packs  README.md  clist2html.pl  configure.ac  export-dist.sh  mkdist.sh  shlib-version.sh  version.sh
app/src/main/cpp/libraw/GoPro/: dng-sdk-1_4-allow-VC5-validate.diff  dng-sdk-1_6-hide-ccVc5-definitiion.diff  gpr_read_image.cpp.diff  gpr_read_image.h.diff
app/src/main/cpp/libraw/RawSpeed/: rawspeed.qmake-pro-files.patch  rawspeed.win32-dll.patch
app/src/main/cpp/libraw/RawSpeed3/patches/: 01.CameraMeta-extensibility.patch  02.Makernotes-processing.patch  03.remove-limits-and-logging.patch  04.clang-cl-compatibility.patch
app/src/main/cpp/libraw/RawSpeed3/rawspeed3_c_api/: rawspeed3_capi.cpp  rawspeed3_capi.h  rawspeed3_capi_test.cpp
app/src/main/cpp/libraw/buildfiles/: libraw-common-lib.pro  libraw.pro
app/src/main/cpp/libraw/doc/: API-CXX.html  API-datastruct.html  API-notes.html  API-overview.html  Why-LibRaw.html
app/src/main/cpp/libraw/lib/: Makefile
app/src/main/cpp/libraw/libraw/: libraw.h  libraw_types.h
app/src/main/cpp/libraw/samples/: Makefile  mem_image_sample.cpp  simple_dcraw.cpp
app/src/main/cpp/libraw/src/: libraw_c_api.cpp  libraw_datastream.cpp
app/src/main/cpp/libraw/src/decoders/: decoders_libraw.cpp  fp_dng.cpp  load_mfbacks.cpp  unpack.cpp  unpack_thumb.cpp
app/src/main/cpp/libraw/src/demosaic/: xtrans_demosaic.cpp
app/src/main/cpp/libraw/src/integration/: dngsdk_glue.cpp
app/src/main/cpp/libraw/src/metadata/: canon.cpp  cr3_parser.cpp  fuji.cpp  hasselblad_model.cpp  identify.cpp  minolta.cpp  olympus.cpp  tiff.cpp
app/src/main/cpp/libraw/src/postprocessing/: postprocessing_ph.cpp  postprocessing_utils_dcrdefs.cpp
app/src/main/cpp/libraw/src/preprocessing/: preprocessing_ph.cpp
app/src/main/cpp/libraw/src/utils/: open.cpp  thumb_utils.cpp
app/src/main/cpp/libraw/src/write/: file_write.cpp  write_ph.cpp
app/src/main/java/com/android/example/cameraxbasic/: MainActivity.kt  MainApplication.kt
app/src/main/java/com/android/example/cameraxbasic/fragments/: CameraFragment.kt  HdrPlusBurst.kt  LutManagementFragment.kt  PermissionsFragment.kt  SettingsFragment.kt
app/src/main/java/com/android/example/cameraxbasic/processor/: ColorProcessor.kt  HdrPlusExportWorker.kt  LutCameraEffect.kt  LutSurfaceProcessor.kt
app/src/main/java/com/android/example/cameraxbasic/utils/: AutoFitTextureView.kt  CameraRepository.kt  ColorUtils.kt  DebugLogManager.kt  ExposureController.kt  ExposureUtils.kt  ImageSaver.kt  LutManager.kt
app/src/main/res/drawable/: bg_zoom_button.xml  ic_flash_off.xml  ic_focus_ring.xml  ic_lut.xml  ic_settings.xml  ic_switch.xml
app/src/main/res/layout/: camera_ui_container.xml  fragment_camera.xml  fragment_lut_management.xml  fragment_settings.xml  item_lut.xml  item_lut_management.xml
app/src/main/res/layout-land/: camera_ui_container.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v28/: styles.xml
